# model2vec-ticket-triage

./: .env.example  README.md  main.py  pyproject.toml
src/: dataset.py  model.py
